WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282501
[shape-outside] Incorrect (overlapping) rendering when float has shape-outside: polygon in RTL
https://bugs.webkit.org/show_bug.cgi?id=282501
Summary
[shape-outside] Incorrect (overlapping) rendering when float has shape-outsid...
alan
Reported
2024-11-02 20:01:05 PDT
ssia
Attachments
Patch
(10.19 KB, patch)
2024-11-02 20:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.19 KB, patch)
2024-11-04 09:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-11-02 20:03:49 PDT
Created
attachment 473114
[details]
Patch
alan
Comment 2
2024-11-04 09:05:36 PST
Created
attachment 473127
[details]
[fast-cq]Patch
EWS
Comment 3
2024-11-04 10:33:57 PST
Committed
286099@main
(512bd0fdd7b7): <
https://commits.webkit.org/286099@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473127
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-11-04 10:34:25 PST
<
rdar://problem/139215719
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug