[shape-outside] Incorrect (overlapping) rendering when float has shape-outside: polygon in RTL https://bugs.webkit.org/show_bug.cgi?id=282501

Reviewed by Antti Koivisto.

Take inline direction into account when computing excluded _logical_ left/right values.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/shapes/LayoutShape.cpp:
(WebCore::createCircleShape):
(WebCore::createEllipseShape):
(WebCore::createPolygonShape):
(WebCore::LayoutShape::createShape):
* Source/WebCore/rendering/shapes/PolygonLayoutShape.cpp:
(WebCore::PolygonLayoutShape::getExcludedInterval const):
* Source/WebCore/rendering/shapes/PolygonLayoutShape.h:
(WebCore::PolygonLayoutShape::PolygonLayoutShape):
* Source/WebCore/rendering/shapes/RectangleLayoutShape.cpp:
(WebCore::RectangleLayoutShape::getExcludedInterval const):
* Source/WebCore/rendering/shapes/RectangleLayoutShape.h:

Canonical link: https://commits.webkit.org/286099@main