Source/WebCore/rendering/shapes/RectangleLayoutShape.cpp
@@ -86,7 +86,7 @@ LineSegment RectangleLayoutShape::getExcludedInterval(LayoutUnit logicalTop, Lay
     }
 
     if (writingMode().isBidiRTL())
-        return { std::max(0.f, m_logicalBoxSize.width() - x2), std::max(0.f, m_logicalBoxSize.width() - x1) };
+        return { std::max(0.f, m_boxLogicalWidth - x2), std::max(0.f, m_boxLogicalWidth - x1) };
     return { x1, x2 };
 }
 
